data_ingress/deploy-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dynamic-namespace-routing
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      map $host $namespace {
        default "default";
        ~^[^.]+\\.(?<namespace>[^.]+)$ $namespace;
      }
      map $host $service_name {
        default "placeholder-service";
        ~^(?<service_name>[^.]+)\\..* $service_name;
      }
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set $service_port 80;
      proxy_pass http://$service_name.$namespace.svc.cluster.local:$service_port;
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Permite HTTP además de HTTPS
spec:
  tls:
    - hosts:
        - "*.*"  # Acepta cualquier host en el formato hostname.namespace
      secretName: dynamic-tls-secret  # Nombre del secreto TLS
  rules:
    - host: "*.*"
      http:
        paths:
          - path: "/"
            pathType: ImplementationSpecific
            backend:
              service:
                name: placeholder-service
                port:
                  number: 80
